--- a/pacmanfs.service
+++ b/pacmanfs.service
@@ -13,6 +13,6 @@ SuccessExitStatus=SIGINT
 WantedBy=multi-user.target 
 
 
-# file: /.config/systemd/user/pacmanFs
+# file: ~/.config/systemd/user/pacmanFs
 #systemctl --user start pacmanfs
 #systemctl --user status pacmanfs
